welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:2: error: ';' expected but 'for' found.
	nbBaggles= k for (k <- 1 to 5)
                     ^Poucet:3: error: '(' expected but identifier found.
  if nbBaggles>2:
     ^Poucet:4: error: illegal start of simple expression
		gauche();avance(5)
                        ^Poucet:5: error: ';' expected but 'else' found.
	else
        ^