welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
while (!sortieTrouvee()){
	nbBaggles= k for (k <- 1 to 5)
  if nbBaggles>2:
		gauche();avance(5)
	else
  	droite();avance(5)
 
}
avance()